# cocos2d-x-live2d

./: .gitmodules  CMakeLists.txt  CubismOffscreenSurface_CC.cpp  CubismOffscreenSurface_CC.h  CubismRenderer_CC.cpp  CubismRenderer_CC.h  L2DFramework.cpp  L2DFramework.h  L2DModel.cpp  L2DModel.h  LAppDefine.cpp  LAppDefine.hpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppPal.hpp  Model.cpp  Model.h  README.md  XLive2D.cpp  XLive2D.h  lua_live2d_auto.cpp  lua_live2d_auto.hpp  lua_x_L2D_auto.cpp  lua_x_L2D_auto.hpp
Core/: CMakeLists.txt
